# hegram

./: .gitignore  Dockerfile  README.md  init.py  main.py  pyproject.toml  style.css
assets/: display.css  fonts.css  highlight.css  style.css
data/: definitions.json  occurences.csv  prepositions.csv
hegram/: app.py  build.py  build_dataframes.py  callbacks.py  conjugation.py  data.py  definitions.py  env.py  mechon_mamre.py  occurences.py  server.py  utils.py
hegram/components/: menu.py  textbox.py
pages/: conjugation.py  datatable_style.py  hiphil_strong.py  hitpael_strong.py  home.py  niphal_peh_yodvav.py  niphal_strong.py  paal_peh_nun.py  paal_peh_yodvav.py  paal_strong.py  piel_strong.py  poual_strong.py  prepositions.py  statistics.py
