[project]
name = "hegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.2",
    "hebrew>=0.8.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "text-fabric>=12.6.2",
]
