[project]
name = "hegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=0.15.3",
    "dash>=2.18.2",
    "fastparquet>=2024.11.0",
    "hebrew>=0.8.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "text-fabric>=12.6.2",
]
[tool.ruff]
line-length = 120
